[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GridMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/LevelMakerLevel.gd" type="Script" id=3]
[ext_resource path="res://Scripts/LevelMakerMain.gd" type="Script" id=4]
[ext_resource path="res://Scripts/GameLevel.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/dead_hammer_48.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Fonts/dead_hammer_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/LevelMakerHand.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/dead_hammer_18.tres" type="DynamicFont" id=9]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridMap" parent="." instance=ExtResource( 2 )]
position = Vector2( 162, 162 )

[node name="Hand" parent="." instance=ExtResource( 1 )]
position = Vector2( 450, 815 )

[node name="GameHand" parent="." instance=ExtResource( 1 )]
position = Vector2( 820, 450 )
rotation = -1.5708
script = ExtResource( 8 )

[node name="VBoxContainerR" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -143.0
margin_bottom = 81.0
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddToHand" type="OptionButton" parent="VBoxContainerR"]
margin_right = 143.0
margin_bottom = 57.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPieceToHand" type="Button" parent="VBoxContainerR"]
margin_top = 61.0
margin_right = 143.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 7 )
text = "add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.026
anchor_right = 0.5
anchor_bottom = 0.026
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "Level Maker"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLevel" type="Node" parent="."]
script = ExtResource( 5 )
hand_path = NodePath("../GameHand")

[node name="Button" type="Button" parent="GameLevel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 7 )
text = "Save"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 128.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 7 )
text = "load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 156.0
margin_right = 128.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 128.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )

[connection signal="pressed" from="VBoxContainerR/AddPieceToHand" to="." method="_on_AddPieceToHand_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/New" to="." method="_on_New_pressed"]
